fix: adjust overflow settings

--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,17 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: "Space Grotesk", sans-serif;
   font-weight: 500;
   text-transform: uppercase;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow-x: hidden; 
 }
 
 .left-side-section {
